--- a/GHMS.Client/Pages/BookingScheduler.razor
+++ b/GHMS.Client/Pages/BookingScheduler.razor
@@ -1,14 +1,11 @@
 @page "/room-scheduler"
- 
 @inject IJSRuntime JS
 @using GHMS.Layout
 @layout MainLayout
  
-<h3>Guest House Scheduler</h3>
  
  
 <div id="Scheduler"></div>
- 
  
 @code {
     private string selectedRoom = "All";
@@ -27,6 +24,7 @@
     {
         if (firstRender)
         {
+            // Ensure JS has loaded
             await JS.InvokeVoidAsync("initScheduler", selectedRoom);
         }
     }
